k8s_dns/ingress-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - dissol.co.uk
        - www.dissol.co.uk
      secretName: dissol-co-uk
  rules:
    - host: dissol.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-master-ip-service
              servicePort: 8080
    - host: www.dissol.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: jenkins-master-ip-service
              servicePort: 8080
